--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "nodemon server.js",
     "debug": "ndb server.js",
-    "start:prod": "SET NODE_ENV=production && nodemon server.js"
+    "start:prod": "SET NODE_ENV=production & nodemon server.js"
   },
   "author": "",
   "license": "ISC",
