Modeling data with mongoose

--- a/package.json
+++ b/package.json
@@ -6,15 +6,25 @@
   "scripts": {
     "start:dev": "nodemon server.js",
     "debug": "ndb server.js",
-    "start:prod": "SET NODE_ENV=production & nodemon server.js"
+    "start:prod": "set NODE_ENV=production&& nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.0.2",
+    "express-rate-limit": "^5.2.6",
+    "helmet": "^4.4.1",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
-    "validator": "^13.5.2"
+    "nodemailer": "^4.7.0",
+    "pug": "^3.0.2",
+    "slugify": "^1.4.7",
+    "validator": "^13.5.2",
+    "xss-clean": "^0.1.1"
   }
 }
