--- a/package.json
+++ b/package.json
@@ -1,30 +1,44 @@
 {
-  "name": "natours",
+  "name": "natours-2.0",
   "version": "1.0.0",
-  "description": "",
+  "description": "A tour-booking website",
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
+    "start:prod": "set NODE_ENV=production&& nodemon server.js",
     "debug": "ndb server.js",
-    "start:prod": "set NODE_ENV=production&& nodemon server.js"
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url /js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url /js"
   },
-  "author": "",
+  "author": "bassant abdelgawad",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@prettier/plugin-pug": "^1.13.5",
+    "a": "^2.1.2",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.2",
     "express-rate-limit": "^5.2.6",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
+    "html-to-text": "^7.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.17",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemailer": "^4.7.0",
+    "prettier": "^2.2.1",
     "pug": "^3.0.2",
+    "sharp": "^0.27.2",
     "slugify": "^1.4.7",
     "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.3"
   }
 }
