--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.27.2",
     "slugify": "^1.4.7",
+    "stripe": "^8.137.0",
     "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
   },
